Make changes in some of files

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -272,5 +272,134 @@
         "desc": "We'll call you to schedule quarterly deep cleaning and preventive health checks of your system for 5 years."
       }
     }
+  },
+  "FAQ" : {
+   "faq": {
+    "header": {
+      "subtitle": "Solar Energy Solutions",
+      "title": "Frequently Asked Questions",
+      "description": "Find answers to all your solar energy questions"
+    },
+    "searchPlaceholder": "Search FAQs...",
+    "searchResults": "result{{count, plural, one {} other {s}}} found",
+    "noResults": {
+      "title": "No questions found",
+      "subtitle": "Try different keywords"
+    },
+    "footer": {
+      "title": "Still have questions?",
+      "subtitle": "Our solar experts are ready to assist you",
+      "button": "Contact Us"
+    },
+  
+    "general": [
+      {
+        "question": "What is Aditya Solar Energy?",
+        "answer": "Aditya Solar Energy designs and installs solar panel systems for homes, housing societies and businesses across Maharashtra.\n\n1. Over 3 years of dedicated experience in the solar industry.\n2. Committed to making solar energy accessible and affordable for every household and business.\n3. Mission: To drive the clean energy revolution forward, one rooftop at a time.\n4. Government-authorized vendor with all necessary certifications and registrations.\n5. Trusted partner for reliable and high-quality solar solutions.\n6. We believe solar reduces electricity costs and creates a sustainable future for generations to come."
+      },
+      {
+        "question": "What is a solar rooftop system?",
+        "answer": "A solar rooftop system is a combination of many components that convert sunlight into usable electricity.\n\nComponents include:\n1. Solar panels with PV cells\n2. Solar inverter\n3. Solar panel mounting structures\n4. AC and DC cables\n5. AC combiner box\n6. DC combiner box\n7. Earthing cables\n8. MC4 connectors"
+      },
+      {
+        "question": "How does a solar rooftop system work?",
+        "answer": "A solar rooftop system works on the principle of converting sunlight into electricity (the photovoltaic effect).\n\n1. Sunlight falls on the PV cells in the solar panel.\n2. The sunlight is converted into DC electricity.\n3. The inverter converts DC power into usable AC power.\n4. The AC electricity is fed into a bidirectional meter.\n5. It supplies power to the house.\n6. Excess power is exported to the DISCOM (grid).\n7. If solar power is insufficient, power is imported from the grid."
+      },
+      {
+        "question": "How to apply for a solar rooftop subsidy?",
+        "answer": "Under the DBT (Direct Benefit Transfer) scheme, applying for a solar rooftop subsidy is simple. Follow these steps:\n\n1. Visit the National Portal for Rooftop Solar website — https://solarrooftop.gov.in/\n2. Download and install the Sandes app from the website.\n3. Register as a customer on the Sandes app.\n4. A DISCOM official will visit your home to check technical feasibility.\n5. After approval, you’ll receive a No Objection Certificate (NOC).\n6. Choose Aditya Solar Energy as your solar installation company.\n7. Discuss project details and sign the agreement.\n8. After receiving payment, installation begins.\n9. We’ll submit a work completion report and apply for net meter installation.\n10. Receive the commissioning certificate.\n11. Upload bank details and a cancelled cheque on the National Portal.\n12. The subsidy amount will be credited to your bank account within 30 days.\n\nAditya Solar Energy assists you throughout this process to ensure a smooth and hassle-free subsidy claim."
+      },
+      {
+        "question": "What is the price of a solar system in India without a subsidy?",
+        "answer": "Aditya Solar Energy offers affordable and high-quality solar solutions.\n\nPricing for Maharashtra:\n1. 3 kW rooftop solar system: ₹1,30,000\n2. 5 kW rooftop solar system: ₹1,70,000\n\nFor other system sizes (2 kW, 4 kW, 7 kW, or 10 kW), contact us for a customized quote. We provide multiple options based on your energy requirements and budget."
+      },
+      {
+        "question": "Why should I go solar?",
+        "answer": "1. Save money on monthly electric bills.\n2. Contribute to protecting the planet by going green.\n3. Solar energy is renewable, clean, and non-polluting.\n4. Emits no greenhouse gases and mitigates climate change.\n5. With Aditya Solar Energy’s affordable pricing and quality service, solar is now accessible for all Maharashtra residents."
+      },
+      {
+        "question": "Is solar power safe?",
+        "answer": "1. The electricity produced by a solar system is the same as grid electricity — only the source differs.\n2. Solar power is among the safest sources of electricity.\n3. It is non-hazardous and does not release any toxic or harmful gases."
+      },
+      {
+        "question": "What do I need to install a rooftop solar system?",
+        "answer": "To qualify for a solar system, you need:\n1. Empty space on your roof.\n2. Access to your rooftop.\n\nProcess:\n3. Fill out the enquiry form on our website or contact us directly.\n4. Our team will visit to discuss your requirement.\n5. Once finalized, we handle design, installation, and maintenance.\n\nAditya Solar Energy, based in Telhara, Akola, serves customers across Maharashtra with prompt service."
+      },
+      {
+        "question": "What are the different types of Solar systems?",
+        "answer": "There are 3 types of solar systems:\n\n1. On-grid solar systems:\n   - Connected to the public electricity grid.\n   - Excess power is exported to the grid.\n   - Net-Metering Policy applies in Maharashtra.\n\n2. Off-grid solar systems:\n   - Not connected to the grid.\n   - Require battery storage.\n   - Designed to generate enough power even during low sunlight.\n\n3. Hybrid solar systems:\n   - Combine solar and battery storage.\n   - Store energy generated during the day for night-time use.\n   - Grid acts as backup when stored energy is depleted."
+      },
+      {
+        "question": "Do solar panels generate electricity even during monsoon and winter?",
+        "answer": "1. Yes, solar panels produce electricity even in cloudy or rainy weather.\n2. Efficiency reduces slightly, but this is accounted for in design.\n3. Even during Maharashtra’s monsoon season, panels continue to generate power."
+      },
+      {
+        "question": "Does a rooftop solar PV generate power during a power failure?",
+        "answer": "1. No, rooftop solar systems do not generate electricity during blackouts.\n2. This is to protect people repairing damaged grids.\n3. Aditya Solar Energy offers Li-ion battery storage for backup.\n4. Stored electricity can be used during the night or power failure."
+      },
+      {
+        "question": "How much electricity does a solar plant produce?",
+        "answer": "1. Depends on sunlight, plant design, and component quality.\n2. On average, 1 kW solar plant produces 4 units per day.\n3. Maharashtra’s strong sunlight makes it ideal for solar generation."
+      },
+      {
+        "question": "What kind of appliances can I use on Solar Power?",
+        "answer": "1. Can power both heavy industrial machines and home appliances.\n2. Electricity is synchronized with grid/diesel generators.\n3. Ensures no voltage fluctuations regardless of usage."
+      },
+      {
+        "question": "How do I decide what size of plant I need?",
+        "answer": "The size depends on:\n1. Your electricity consumption.\n2. Available shadow-free area.\n3. Solar irradiation in your area.\n\nAditya Solar Energy conducts an assessment to recommend the best size for maximum savings."
+      },
+      {
+        "question": "What is Net metering?",
+        "answer": "1. Net Metering allows solar owners to earn credits for power added to the grid.\n2. Excess power sent to the grid can be taken back when needed.\n3. The bi-directional meter runs backward when excess power is exported.\n4. You are billed only for the net power used.\n5. Available for both residential and commercial consumers in Maharashtra."
+      }
+    ],
+    "maintenance": [
+      {
+        "question": "What is the life of a rooftop solar system?",
+        "answer": "1. The solar plant’s lifespan is 25 years.\n2. Solar panels: 25-year warranty.\n3. Inverters: 5–12-year warranty.\n4. Aditya Solar Energy uses high-quality components for long-term efficiency."
+      },
+      {
+        "question": "Do Solar Rooftop projects have a high maintenance cost?",
+        "answer": "1. No, solar systems have very low maintenance costs.\n2. Minimal moving parts reduce maintenance needs.\n3. Aditya Solar Energy provides 5 years of free maintenance."
+      },
+      {
+        "question": "Can Solar projects damage my roof?",
+        "answer": "1. No, Aditya Solar Energy ensures no damage during installation.\n2. We use non-penetrating structures and waterproofing methods.\n3. We are government-authorized with proper certifications."
+      },
+      {
+        "question": "Do I need to clean my Solar plant?",
+        "answer": "1. Clean the panels 1–2 times a month.\n2. Best time: early morning or night.\n3. Use a clean wet cloth, nylon brush, or sponge.\n4. Avoid detergents or metal brushes.\n5. During the 5-year free maintenance period, our team assists with cleaning."
+      },
+      {
+        "question": "My roof is not made of concrete; can I still install a Solar Project?",
+        "answer": "1. Yes, solar can be installed on almost any roof type.\n2. For brittle materials like asbestos, we provide safe solutions.\n3. Aditya Solar Energy ensures secure installation for all roof types."
+      }
+    ],
+    "economics": [
+      {
+        "question": "How much does a solar Plant cost?",
+        "answer": "Pricing at Aditya Solar Energy (after subsidy):\n\n1. 3 kW rooftop system: ₹1,12,000\n2. 5 kW rooftop system: ₹1,67,000\n\nIncludes:\n3. High-quality components\n4. Professional installation\n5. 5 years of free maintenance"
+      },
+      {
+        "question": "What is the break-even period for Solar rooftop projects?",
+        "answer": "1. Typical breakeven: 3–5 years.\n2. Project life: 25 years.\n3. You start saving from day one.\n4. Aditya Solar Energy ensures quick ROI through affordable installation."
+      },
+      {
+        "question": "Are there any subsidies provided by the government for solar projects?",
+        "answer": "1. No subsidies for commercial entities.\n2. Residential rooftop projects in Maharashtra receive subsidies within 30 days.\n3. Aditya Solar Energy assists with the entire subsidy process.\n\nSubsidy slabs:\n────────────────────────────\nSegment          | Size | Subsidy\n────────────────────────────\nIndividual house | 1kW  | ₹30,000\nIndividual house | 2kW  | ₹60,000\nIndividual house | 3kW+ | ₹78,000\n────────────────────────────\n\nWe guide you through every step, ensuring a hassle-free claim."
+      },
+      {
+        "question": "What is the difference between CapEx and OpEx models?",
+        "answer": "1. CapEx Model:\n   - Consumer invests the full amount.\n   - Solar EPC company installs and maintains the system.\n   - Ownership lies with the consumer.\n\n2. OpEx Model:\n   - Investor/developer invests in the system.\n   - Consumer pays only for energy used (via PPA agreement).\n   - Suitable for users wanting zero upfront cost.\n\nAditya Solar Energy helps you choose the best model for your needs."
+      },
+      {
+        "question": "Are financing options available for Solar Rooftop projects?",
+        "answer": "Yes, Aditya Solar Energy provides attractive EMI options.\n\n1. Interest Rate: 6% per annum\n2. Repayment Period: Up to 10 years\n3. Minimal documentation required\n4. Start saving immediately while paying in easy monthly installments.\n5. Savings on electricity often cover the EMI amount."
+      }
+    ]
   }
 }
+
+}
+
