--- a/src/locales/mr/translation.json
+++ b/src/locales/mr/translation.json
@@ -271,5 +271,131 @@
         "desc": "५ वर्षांसाठी दर तीन महिन्यांनी डीप क्लिनिंग आणि आरोग्य तपासणीचे वेळापत्रक ठरवण्यासाठी आम्ही तुमच्याशी संपर्क साधू."
       }
     }
+  },
+  "FAQ": {
+    "faq": {
+      "header": {
+        "subtitle": "सौर ऊर्जा उपाय",
+        "title": "वारंवार विचारले जाणारे प्रश्न",
+        "description": "तुमच्या सर्व सौर ऊर्जेसंबंधी प्रश्नांची उत्तरे येथे शोधा"
+      },
+      "searchPlaceholder": "वारंवार विचारले जाणारे प्रश्न शोधा...",
+      "searchResults": "परिणाम{{count, plural, one {} other {s}}} आढळले",
+      "noResults": {
+        "title": "कोणतेही प्रश्न आढळले नाहीत",
+        "subtitle": "कृपया वेगवेगळे कीवर्ड वापरून पहा"
+      },
+      "footer": {
+        "title": "अजूनही प्रश्न आहेत का?",
+        "subtitle": "आमचे सौर तज्ज्ञ तुम्हाला मदत करण्यास तयार आहेत",
+        "button": "आमच्याशी संपर्क करा"
+      },
+      "general": [
+        {
+          "question": "आदित्य सोलर एनर्जी म्हणजे काय?",
+          "answer": "आदित्य सोलर एनर्जी महाराष्ट्रातील घरांसाठी, हाउसिंग सोसायट्यांसाठी आणि व्यवसायांसाठी सौर पॅनेल प्रणालींचे डिझाइन आणि प्रतिष्ठापन करते.\n\n1. सौर उद्योगातील 3 वर्षांहून अधिक समर्पित अनुभव.\n2. प्रत्येक घर आणि व्यवसायासाठी सौर ऊर्जा सुलभ आणि परवडणारी बनवण्यास वचनबद्ध.\n3. ध्येय: प्रत्येक छतावरून स्वच्छ ऊर्जेची क्रांती पुढे नेणे.\n4. सरकार-अधिकृत विक्रेता, आवश्यक प्रमाणपत्रे आणि नोंदणींसह.\n5. विश्वासार्ह आणि उच्च गुणवत्तेच्या सौर उपायांसाठी विश्वासू भागीदार.\n6. आम्हाला विश्वास आहे की सौर ऊर्जेमुळे वीज खर्च कमी होतो आणि भावी पिढ्यांसाठी शाश्वत भविष्य तयार होते."
+        },
+        {
+          "question": "सौर रूफटॉप प्रणाली म्हणजे काय?",
+          "answer": "सौर रूफटॉप प्रणाली ही अनेक घटकांचे संयोजन असते जी सूर्यप्रकाशाला वापरण्यायोग्य वीजेमध्ये रूपांतरित करते.\n\nघटकांमध्ये समाविष्ट आहे:\n1. पीव्ही सेल असलेले सौर पॅनेल\n2. सौर इन्व्हर्टर\n3. सौर पॅनेल माउंटिंग स्ट्रक्चर्स\n4. एसी आणि डीसी केबल्स\n5. एसी कॉम्बिनर बॉक्स\n6. डीसी कॉम्बिनर बॉक्स\n7. अर्थिंग केबल्स\n8. एमसी4 कनेक्टर्स"
+        },
+        {
+          "question": "सौर रूफटॉप प्रणाली कशी कार्य करते?",
+          "answer": "सौर रूफटॉप प्रणाली सूर्यप्रकाशाचे वीजेमध्ये रूपांतर करण्याच्या (फोटोव्होल्टाइक प्रभाव) तत्त्वावर कार्य करते.\n\n1. सूर्यप्रकाश पीव्ही सेलवर पडतो.\n2. सूर्यप्रकाश डीसी वीजेमध्ये रूपांतरित होतो.\n3. इन्व्हर्टर डीसी वीजेला एसी वीजेमध्ये रूपांतरित करतो.\n4. एसी वीज द्विदिश मीटरमध्ये फीड केली जाते.\n5. ती वीज घरात वापरली जाते.\n6. जास्त वीज डिस्कॉम (ग्रिड) मध्ये पाठवली जाते.\n7. जर सौर वीज अपुरी असेल, तर वीज ग्रिडकडून घेतली जाते."
+        },
+        {
+          "question": "सौर रूफटॉप अनुदानासाठी अर्ज कसा करायचा?",
+          "answer": "डीबीटी (डायरेक्ट बेनिफिट ट्रान्सफर) योजनेखाली सौर रूफटॉप अनुदानासाठी अर्ज करणे सोपे आहे. खालील टप्पे पूर्ण करा:\n\n1. नॅशनल पोर्टल फॉर रूफटॉप सोलर वेबसाइटला भेट द्या — https://solarrooftop.gov.in/\n2. त्या वेबसाइटवरून सॅंडेस अ‍ॅप डाउनलोड आणि इन्स्टॉल करा.\n3. ग्राहक म्हणून सॅंडेस अ‍ॅपवर नोंदणी करा.\n4. डिस्कॉम अधिकारी तुमच्या घराची तांत्रिक पाहणी करतील.\n5. मंजुरीनंतर तुम्हाला नॉन-ऑब्जेक्शन सर्टिफिकेट (NOC) मिळेल.\n6. तुमच्या सौर प्रतिष्ठापनासाठी आदित्य सोलर एनर्जीची निवड करा.\n7. प्रकल्पाचा तपशील चर्चा करा आणि करारावर स्वाक्षरी करा.\n8. पेमेंट मिळाल्यावर प्रतिष्ठापन सुरू होईल.\n9. आम्ही काम पूर्ण अहवाल सादर करू आणि नेट मीटरसाठी अर्ज करू.\n10. तुम्हाला कमिशनिंग प्रमाणपत्र मिळेल.\n11. नॅशनल पोर्टलवर बँक तपशील आणि रद्द केलेला चेक अपलोड करा.\n12. 30 दिवसांच्या आत तुमच्या खात्यात अनुदानाची रक्कम जमा होईल.\n\nआदित्य सोलर एनर्जी या प्रक्रियेदरम्यान तुमची संपूर्ण मदत करते जेणेकरून अनुदान मिळवणे सुलभ आणि त्रासमुक्त होईल."
+        },
+        {
+          "question": "अनुदानाशिवाय भारतात सौर प्रणालीची किंमत किती आहे?",
+          "answer": "आदित्य सोलर एनर्जी परवडणारे आणि उच्च गुणवत्तेचे सौर उपाय प्रदान करते.\n\nमहाराष्ट्रासाठी किंमत:\n1. 3 किलोवॅट रूफटॉप सौर प्रणाली: ₹1,30,000\n2. 5 किलोवॅट रूफटॉप सौर प्रणाली: ₹1,70,000\n\nइतर आकारांच्या प्रणालीसाठी (2 kW, 4 kW, 7 kW किंवा 10 kW) आमच्याशी संपर्क साधा. आम्ही तुमच्या उर्जेच्या गरजा आणि बजेटनुसार पर्याय प्रदान करतो."
+        },
+        {
+          "question": "सौर ऊर्जा का वापरावी?",
+          "answer": "1. दरमहा वीज बिलात बचत करा.\n2. पर्यावरणाचे रक्षण करण्यात योगदान द्या.\n3. सौर ऊर्जा नवीकरणीय, स्वच्छ आणि प्रदूषणमुक्त आहे.\n4. कोणतेही हरितगृह वायू उत्सर्जन नाही आणि हवामान बदल रोखते.\n5. आदित्य सोलर एनर्जीच्या परवडणाऱ्या दरांमुळे सौर ऊर्जा आता महाराष्ट्रातील सर्वांसाठी सुलभ आहे."
+        },
+        {
+          "question": "सौर ऊर्जा सुरक्षित आहे का?",
+          "answer": "1. सौर प्रणालीद्वारे उत्पादित वीज ही ग्रिड वीजेसारखीच असते — फक्त स्रोत वेगळा असतो.\n2. सौर ऊर्जा ही सर्वात सुरक्षित ऊर्जेच्या स्रोतांपैकी एक आहे.\n3. ती गैर-विषारी आहे आणि कोणतेही हानिकारक वायू सोडत नाही."
+        },
+        {
+          "question": "रूफटॉप सौर प्रणाली बसवण्यासाठी मला काय आवश्यक आहे?",
+          "answer": "सौर प्रणालीसाठी पात्र होण्यासाठी तुम्हाला आवश्यक आहे:\n1. छतावर मोकळी जागा.\n2. छतावर प्रवेशाची सुविधा.\n\nप्रक्रिया:\n3. आमच्या वेबसाइटवरील चौकशी फॉर्म भरा किंवा थेट आमच्याशी संपर्क साधा.\n4. आमचा संघ तुमच्या आवश्यकतेवर चर्चा करण्यासाठी भेट देईल.\n5. अंतिम निर्णयानंतर आम्ही डिझाइन, प्रतिष्ठापन आणि देखभाल हाताळतो.\n\nआदित्य सोलर एनर्जी, तेल्हारा (अकोला) येथे स्थित असून महाराष्ट्रभर ग्राहकांना तत्पर सेवा प्रदान करते."
+        },
+        {
+          "question": "सौर प्रणालीचे किती प्रकार असतात?",
+          "answer": "सौर प्रणालीचे तीन प्रकार आहेत:\n\n1. ऑन-ग्रिड सौर प्रणाली:\n   - सार्वजनिक वीज ग्रिडशी जोडलेली.\n   - जास्त वीज ग्रिडमध्ये पाठवली जाते.\n   - महाराष्ट्रात नेट-मीटरिंग धोरण लागू आहे.\n\n2. ऑफ-ग्रिड सौर प्रणाली:\n   - ग्रिडशी जोडलेली नाही.\n   - बॅटरी साठवण आवश्यक आहे.\n   - कमी सूर्यप्रकाशातही वीज निर्मितीसाठी डिझाइन केलेली.\n\n3. हायब्रिड सौर प्रणाली:\n   - सौर आणि बॅटरी साठवण यांचे संयोजन.\n   - दिवसात निर्माण झालेली वीज रात्रीसाठी साठवते.\n   - ग्रिड बॅकअप म्हणून कार्य करते."
+        },
+        {
+          "question": "सौर पॅनेल पावसाळा आणि हिवाळ्यात वीज निर्माण करतात का?",
+          "answer": "1. होय, सौर पॅनेल ढगाळ किंवा पावसाळी हवामानातही वीज निर्माण करतात.\n2. कार्यक्षमता थोडी कमी होते, पण ती डिझाइनमध्ये लक्षात घेतली जाते.\n3. महाराष्ट्रातील पावसाळ्यातही पॅनेल वीज निर्माण करत राहतात."
+        },
+        {
+          "question": "वीज गेल्यावर सौर प्रणाली वीज निर्माण करते का?",
+          "answer": "1. नाही, वीज खंडित झाल्यावर सौर प्रणाली वीज निर्माण करत नाही.\n2. हे ग्रिड दुरुस्त करणाऱ्या लोकांच्या सुरक्षेसाठी केले जाते.\n3. आदित्य सोलर एनर्जी लि-आयन बॅटरी बॅकअप सुविधा देते.\n4. साठवलेली वीज रात्री किंवा वीज खंडित झाल्यावर वापरली जाऊ शकते."
+        },
+        {
+          "question": "सौर प्रणाली किती वीज निर्माण करते?",
+          "answer": "1. सूर्यप्रकाश, डिझाइन आणि घटकांच्या गुणवत्तेवर अवलंबून असते.\n2. सरासरी 1 किलोवॅट सौर प्रणाली दररोज 4 युनिट वीज निर्माण करते.\n3. महाराष्ट्राचा तीव्र सूर्यप्रकाश सौर निर्मितीसाठी आदर्श आहे."
+        },
+        {
+          "question": "सौर वीजेवर कोणती उपकरणे चालवता येतात?",
+          "answer": "1. जड औद्योगिक यंत्रे आणि घरगुती उपकरणे दोन्ही चालवता येतात.\n2. वीज ग्रिड/डीझेल जनरेटरसोबत समक्रमित केली जाते.\n3. वापरावर अवलंबून कोणतेही व्होल्टेज चढ-उतार होत नाहीत."
+        },
+        {
+          "question": "मला कोणत्या आकाराचा सौर प्लांट आवश्यक आहे हे कसे ठरवावे?",
+          "answer": "आकार खालील गोष्टींवर अवलंबून असतो:\n1. तुमचा वीज वापर.\n2. उपलब्ध सावली-मुक्त क्षेत्रफळ.\n3. तुमच्या भागातील सौर विकिरण.\n\nआदित्य सोलर एनर्जी तुमच्या बचतीसाठी सर्वोत्तम आकाराची शिफारस करण्यासाठी मूल्यांकन करते."
+        },
+        {
+          "question": "नेट मीटरिंग म्हणजे काय?",
+          "answer": "1. नेट मीटरिंगमुळे सौर मालकांना ग्रिडमध्ये दिलेल्या विजेसाठी क्रेडिट मिळते.\n2. जास्त वीज ग्रिडमध्ये पाठवली गेली की आवश्यकतेनुसार पुन्हा वापरता येते.\n3. द्विदिश मीटर अतिरिक्त वीज निर्यात करताना मागे फिरतो.\n4. तुम्हाला फक्त निव्वळ वापरलेल्या विजेसाठी बिल येते.\n5. महाराष्ट्रातील निवासी आणि व्यावसायिक ग्राहकांसाठी उपलब्ध."
+        }
+      ],
+      "maintenance": [
+    {
+      "question": "रूफटॉप सौर प्रणालीचे आयुष्य किती असते?",
+      "answer": "1. सौर प्रकल्पाचे आयुष्य 25 वर्षे असते.\n2. सौर पॅनेल: 25 वर्षांची हमी.\n3. इन्व्हर्टर: 5–12 वर्षांची हमी.\n4. आदित्य सोलर एनर्जी दीर्घकालीन कार्यक्षमतेसाठी उच्च दर्जाचे घटक वापरते."
+    },
+    {
+      "question": "सौर रूफटॉप प्रकल्पांची देखभाल खर्चिक असते का?",
+      "answer": "1. नाही, सौर प्रणालींची देखभाल खर्च अत्यंत कमी असतो.\n2. कमीतकमी हालचाल करणारे भाग असल्याने देखभाल आवश्यकतेत घट येते.\n3. आदित्य सोलर एनर्जी 5 वर्षांची मोफत देखभाल सुविधा प्रदान करते."
+    },
+    {
+      "question": "सौर प्रकल्पामुळे माझ्या छताला नुकसान होऊ शकते का?",
+      "answer": "1. नाही, आदित्य सोलर एनर्जी प्रतिष्ठापन करताना कोणतेही नुकसान होऊ देत नाही.\n2. आम्ही नॉन-पेनेट्रेटिंग स्ट्रक्चर्स आणि वॉटरप्रूफिंग तंत्रांचा वापर करतो.\n3. आम्ही शासनमान्य आणि योग्य प्रमाणपत्रधारक आहोत."
+    },
+    {
+      "question": "मला माझ्या सौर प्रकल्पाची स्वच्छता करावी लागेल का?",
+      "answer": "1. पॅनेल महिन्यातून 1–2 वेळा स्वच्छ करा.\n2. सर्वोत्तम वेळ: सकाळी लवकर किंवा रात्री.\n3. स्वच्छ ओल्या कापडाने, नायलॉन ब्रश किंवा स्पंजने स्वच्छ करा.\n4. डिटर्जंट किंवा धातूच्या ब्रशचा वापर टाळा.\n5. 5 वर्षांच्या मोफत देखभाल कालावधीत आमची टीम स्वच्छतेस मदत करते."
+    },
+    {
+      "question": "माझे छत काँक्रीटचे नाही, तरी मी सौर प्रकल्प बसवू शकतो का?",
+      "answer": "1. होय, जवळपास सर्व प्रकारच्या छतांवर सौर प्रणाली बसवता येते.\n2. अॅस्बेस्टॉससारख्या कमकुवत साहित्यांसाठी आम्ही सुरक्षित उपाय उपलब्ध करतो.\n3. आदित्य सोलर एनर्जी सर्व प्रकारच्या छतांसाठी सुरक्षित प्रतिष्ठापन सुनिश्चित करते."
+    }
+  ],
+   "economics": [
+    {
+      "question": "सौर प्रणाली बसवल्यानंतर वीज बिल किती कमी होईल?",
+      "answer": "1. ऑन-ग्रिड प्रणालीमध्ये 80% ते 90% पर्यंत वीज बिलात बचत होते.\n2. आपल्या वीज वापरावर आणि प्रणालीच्या आकारावर हे प्रमाण अवलंबून असते.\n3. आदित्य सोलर एनर्जी नेमकी बचत आणि परतावा अंदाज करून देते."
+    },
+    {
+      "question": "सौर प्रकल्प बसवल्यानंतर गुंतवणुकीचा परतावा किती काळात मिळतो?",
+      "answer": "1. सामान्यतः 3 ते 5 वर्षांच्या आत गुंतवणुकीचा खर्च परत मिळतो.\n2. त्यानंतर 20 वर्षांहून अधिक काळ मोफत वीज निर्मिती मिळते.\n3. आदित्य सोलर एनर्जी उच्च कार्यक्षम प्रणालींमुळे अधिक जलद परतावा सुनिश्चित करते."
+    },
+    {
+      "question": "सौर प्रकल्पासाठी बँकेकडून कर्ज मिळते का?",
+      "answer": "1. होय, सौर प्रकल्पांसाठी सरकारी मान्यताप्राप्त बँका कर्ज देतात.\n2. व्याजदर 8% ते 10% दरम्यान असतो.\n3. आदित्य सोलर एनर्जी बँक कर्ज प्रक्रियेमध्ये पूर्ण मार्गदर्शन करते."
+    },
+    {
+      "question": "सौर प्रकल्पाचा मीटर कसा असतो?",
+      "answer": "1. सौर प्रकल्पासाठी द्विदिशीय (Bi-directional) मीटर बसविला जातो.\n2. हा मीटर वापरलेली व निर्मित वीज दोन्ही मोजतो.\n3. अतिरिक्त वीज ग्रिडला पाठविल्यास, ती आपल्या खात्यात क्रेडिट केली जाते."
+    },
+    {
+      "question": "सरकारी अनुदान (subsidy) मिळते का?",
+      "answer": "1. होय, केंद्र व राज्य शासनाकडून अनुदान उपलब्ध आहे.\n2. MNRE योजनेअंतर्गत 1–3kW साठी 60%, तर 3kW पेक्षा जास्त क्षमतेसाठी 40% पर्यंत अनुदान मिळते.\n3. आदित्य सोलर एनर्जी संपूर्ण सबसिडी प्रक्रियेमध्ये मदत करते."
+    }
+  ]
+    }
   }
 }
